--- a/workload/helm3/manifests/workload-spec.yaml
+++ b/workload/helm3/manifests/workload-spec.yaml
@@ -4,4 +4,4 @@ project: ranjith-training
 type: Helm3
 clusters: "ranjith-soln"
 payload: "./apache-8.0.0-rafay.tgz"
-values: "./apache-custom-values.yaml”
+values: "./apache-custom-values.yaml"
