--- a/workload/helm3/manifests/workload-spec.yaml
+++ b/workload/helm3/manifests/workload-spec.yaml
@@ -1,7 +1,7 @@
-name: apache
-namespace: apache
-project: ranjith-training
+name: %workload%
+namespace: %ns_name%
+project: %project_name%
 type: Helm3
-clusters: "ranjith-soln"
-payload: "./apache-8.0.0-rafay.tgz"
-values: "./apache-custom-values.yaml"
+clusters: %cluster_name%
+payload: %payload_package%
+values: %payload_values%
