Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,6 +37,7 @@ steps:
     export RCTL_REST_ENDPOINT= "console.rafay.dev"
     export RCTL_OPS_ENDPOINT= "ops.rafay.dev"
     export type= "helm3"
+    export project=$(RCTL_PROJECT)
     export workload=$(WORKLOAD_NAME)
     export namespace=$(NAMESPACE)
     export cluster= $(CLUSTER_NAME)
@@ -45,8 +46,8 @@ steps:
     wget -O ${HOME}/rctl-linux-amd64.tar.bz2 https://s3-us-west-2.amazonaws.com/rafay-prod-cli/publish/rctl-linux-amd64.tar.bz2
     tar -C ${HOME} -xf ${HOME}/rctl-linux-amd64.tar.bz2
     set +e
-    `sudo sed "s/%workload_name%/$(workload)/g; s/%ns_name%/$(namespace)/g; s/%project_name%/$(RCTL_PROJECT)/g; s/%cluster_name%/$(cluster)/g; s/%payload_package%/$(payload)/g; s/%payload_values%/$(values)/g" $(workload_yaml) > (workload_yaml)`
     `sudo sed "s/%ns_name%/$(namespace)/g; s/%cluster_name%/$(cluster)/g" $(create_ns_yaml)  > create_ns.yaml`
+    `sudo sed "s/%workload_name%/$(workload)/g; s/%ns_name%/$(namespace)/g; s/%project_name%/$(project)/g; s/%cluster_name%/$(cluster)/g; s/%payload_package%/$(payload)/g; s/%payload_values%/$(values)/g" $(workload_yaml) > (workload_yaml)`
     chmod 777 ${HOME}/rctl
     echo "Rafay Binary has been pulled and saved successfully on Agent machine"
     ${HOME}/rctl get cluster | awk {'print $2'}| grep -v NAME | awk '!/^$/' > /tmp/getcluster.out
