Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,30 +32,22 @@ steps:
 - script: |
     
     export RCTL_API_KEY=$(RCTL_API_KEY)
+    echo "KEY $(RCTL_API_KEY)"
     export RCTL_PROFILE=$(RCTL_PROFILE)
     export RCTL_API_SECRET=$(RCTL_API_SECRET)
+    echo "Secret $(RCTL_API_SECRET)"
     export RCTL_PROJECT=$(RCTL_PROJECT)
+    echo "Project $(RCTL_PROJECT)"
     export RCTL_REST_ENDPOINT= "console.rafay.dev"
+    echo "Rest EP $(RCTL_REST_ENDPOINT)"
     export RCTL_OPS_ENDPOINT= "ops.rafay.dev"
-    export type= "helm3"
-    export project=$(RCTL_PROJECT)
-    echo "Project: $(project)"
-    export workload=$(WORKLOAD)
-    echo "Workload : $(workload)"
-    export namespace=$(namespace)
-    echo "Namespace: $(workload)"
-    export clustername=$(CLUSTER)
-    echo "Cluster: $(cluster)"
-    export payload= $(PAYLOAD)
-    echo "Payload: $(payload)"
-    export values= $(VALUES)
-    echo "Values: $(values)"
+    
     wget -O ${HOME}/rctl-linux-amd64.tar.bz2 https://s3-us-west-2.amazonaws.com/rafay-prod-cli/publish/rctl-linux-amd64.tar.bz2
     tar -C ${HOME} -xf ${HOME}/rctl-linux-amd64.tar.bz2
     set +e
-    `sudo sed "s/%ns_name%/$(namespace)/g; s/%cluster_name%/$(clustername)/g" $(create_ns_yaml)  > create_ns.yaml`
+    `sudo sed "s/%ns_name%/$(NAMESPACE)/g; s/%cluster_name%/$(CLUSTER)/g" $(create_ns_yaml)  > create_ns.yaml`
     cat create_ns.yaml
-    `sudo sed "s/%workload_name%/$(workload)/g; s/%ns_name%/$(namespace)/g; s/%project_name%/$(project)/g; s/%cluster_name%/$(clustername)/g; s/%payload_package%/$(payload)/g; s/%payload_values%/$(values)/g" $(workload_yaml) > $(workload_yaml)`
+    `sudo sed "s/%workload_name%/$(WORKLOAD)/g; s/%ns_name%/$(NAMESPACE)/g; s/%project_name%/$(RCTL_PROJECT)/g; s/%cluster_name%/$(CLUSTER)/g; s/%payload_package%/$(PAYLOAD)/g; s/%payload_values%/$(VALUES)/g" $(workload_yaml) > $(workload_yaml)`
     cat $(workload_yaml)
     chmod 777 ${HOME}/rctl
     echo "Rafay Binary has been pulled and saved successfully on Agent machine"
