Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,8 +46,8 @@ steps:
     tar -C ${HOME} -xf ${HOME}/rctl-linux-amd64.tar.bz2
     set +e
     `sudo sed "s/%ns_name%/$(NAMESPACE)/g; s/%cluster_name%/$(CLUSTER)/g" $(create_ns_yaml)  > create_ns.yaml`
-    cat create_ns.yaml
-    `sudo sed -i -e "s/%workload_name%/$(WORKLOAD)/; s/%ns_name%/$(NAMESPACE)/; s/%project_name%/$(RCTL_PROJECT)/; s/%cluster_name%/$(CLUSTER)/; s/%payload_package%/$(PAYLOAD)/; s/%payload_values%/$(VALUES)/" $(workload_yaml)`
+    cat create_workload.yaml
+    `sudo sed "s/%workload_name%/$(WORKLOAD)/g; s/%ns_name%/$(NAMESPACE)/g; s/%project_name%/$(RCTL_PROJECT)/g; s/%cluster_name%/$(CLUSTER)/g;  s/%payload_package%/$(PAYLOAD)/g; s/%payload_values%/$(VALUES)/g" $(workload_yaml)  > create_workload.yaml`
     cat $(workload_yaml)
     chmod 777 ${HOME}/rctl
     echo "Rafay Binary has been pulled and saved successfully on Agent machine"
@@ -69,7 +69,7 @@ steps:
       echo "Namespace $(namespace) is already exists"
     fi
     rm /tmp/getns.out
-    ${HOME}/rctl create workload -f workload.yaml
+    ${HOME}/rctl create workload create_workload.yaml
     if [ $? -eq 1 ];
     then
       echo "$(workload) deployment has been Failed"
