--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,7 +53,7 @@ steps:
     echo "Rafay Binary has been pulled and saved successfully on Agent machine"
     ${HOME}/rctl get cluster | awk {'print $2'}| grep -v NAME | awk '!/^$/' > /tmp/getcluster.out
     
-    if [ $(namespace)[0].isupper() ]; then
+    if [ namespace[0].isupper() ]; then
        echo "Namespace should starts with lowercase"
        exit 0
     fi   
