--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,13 +60,14 @@ steps:
       ${HOME}/rctl create ns -f create_ns.yaml
       sleep 5
       ${HOME}/rctl publish ns $(namespace)
-      namespace_status= `${HOME}/rctl status namespace $(namespace)| awk '{print $6}' | grep -v "PUBLISHPENDING"`  
+      namespace_status=true
       namespace_status_iterations=1
       while [ "$namespace_status" != "true" ];
       do
-        echo "$workload_status"
+        namespace_status= `${HOME}/rctl status namespace $(namespace)| awk '{print $6}' | grep -v "PUBLISHPENDING"`
+        echo "$namespace_status"
         sleep 10
-        if [[ "$namespace_status" = "true"  ||  $workload_status_iterations -eq 10 ]];then
+        if [[ "$namespace_status" = "true"  ||  $namespace_status_iterations -eq 10 ]];then
           echo "$(namespace) creation has been Failed"
           exit 0
         fi
