Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,7 +65,7 @@ steps:
       while [ "$namespace_status" != "true" ];
       do
         namespace_status= `${HOME}/rctl status namespace $(namespace)| awk '{print $6}' | grep -v "PUBLISHPENDING"`
-        echo "$namespace_status"
+        echo "$(namespace_status)"
         sleep 10
         if [[ "$namespace_status" = "true"  ||  $namespace_status_iterations -eq 10 ]];then
           echo "$(namespace) creation has been Failed"
@@ -90,7 +90,7 @@ steps:
     while [ "$workload_status" != "Ready" ];
     do
       workload_status=`${HOME}/rctl status workload $(workload) -o json|jq .result[].status|tr -d '"'`
-      echo "$(workload)  deployment is $workload_status"
+      echo "$(workload)  deployment is ($workload_status)"
       sleep 10
       if [[ "$workload_status" = "Failed"  ||  $workload_status_iterations -eq 15 ]];
       then
