--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,8 +64,8 @@ steps:
       namespace_status_iterations=1
       while [ "$namespace_status" != "true" ];
       do
-        namespace_status= `${HOME}/rctl status namespace $(namespace)| awk '{print $6}' | grep -v "PUBLISHPENDING"`
-        echo "$(namespace_status)"
+        namespace_status= `${HOME}/./rctl status namespace apache | awk 'FNR==4{print $6}'
+        echo "$namespace_status"
         sleep 10
         if [[ "$namespace_status" = "true"  ||  $namespace_status_iterations -eq 10 ]];then
           echo "$(namespace) creation has been Failed"
@@ -90,7 +90,7 @@ steps:
     while [ "$workload_status" != "Ready" ];
     do
       workload_status=`${HOME}/rctl status workload $(workload) -o json|jq .result[].status|tr -d '"'`
-      echo "$(workload)  deployment is ($workload_status)"
+      echo "$(workload)  deployment is $workload_status"
       sleep 10
       if [[ "$workload_status" = "Failed"  ||  $workload_status_iterations -eq 15 ]];
       then
