--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,7 +64,7 @@ steps:
       namespace_status_iterations=1
       while [ "$namespace_status" != "true" ];
       do
-        namespace_status= `${HOME}/./rctl status namespace apache | awk 'FNR==4{print $6}'
+        namespace_status= `${HOME}/./rctl status namespace apache | awk 'FNR==4{print $6}'`
         echo "$namespace_status"
         sleep 10
         if [[ "$namespace_status" = "true"  ||  $namespace_status_iterations -eq 10 ]];then
