--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,7 +62,7 @@ steps:
       ${HOME}/rctl publish ns $(namespace)
       while [ "$namespace_status" != "false" ];
       do
-        namespace_status= `${HOME}/rctl status namespace $(namespace) | awk '{print $6}'| grep -V "PUBLISHPENDING" |  awk '!/^$/'`
+        namespace_status= `${HOME}/rctl status namespace $(namespace) | awk '{print $6}'| grep -v "PUBLISHPENDING" |  awk '!/^$/'`
         echo "$(namespace) publishing status is $namespace_status"
       done
     else
