--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,8 +60,10 @@ steps:
       ${HOME}/rctl create ns -f create_ns.yaml
       sleep 5
       ${HOME}/rctl publish ns $(namespace)
+      namespace_status="Not Ready"
       while [ "$namespace_status" != "false" ];
       do
+        echo "$namespace_status"
         namespace_status= `${HOME}/rctl status namespace $(namespace) | awk '{print $6}'| grep -v "PUBLISHPENDING" |  awk '!/^$/'`
         echo "$(namespace) publishing status is $(namespace_status)"
       done
