--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,8 +64,8 @@ steps:
       while [ "$namespace_status" != "false" ];
       do
         echo "$namespace_status"
-        namespace_status= `${HOME}/rctl status namespace $(namespace) | awk '{print $6}'| grep -v "PUBLISHPENDING" |  awk '!/^$/'`
-        echo "$(namespace) publishing status is $(namespace_status)"
+        namespace_status=`${HOME}/rctl status namespace $(namespace) | awk '{print $6}'| grep -v "PUBLISHPENDING" |  awk '!/^$/'`
+        echo "$(namespace) publishing status is $namespace_status"
       done
     else
       echo "Namespace $(namespace) is already exists"
