--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,17 +64,15 @@ steps:
       namespace_status_iterations=1
       while [ "$namespace_status" != $(cluster) ];
       do
-        echo "$namespace_status"
         sleep 5  
         namespace_status=`${HOME}/rctl status namespace $(namespace) | awk '{print $10}'| grep -v "DEPLOYEDCLUSTERS" |  awk '!/^$/'`
         if [[ "$namespace_status" != $(cluster)  &&  $namespace_status_iterations -eq 10 ]];then
           echo "$(namespace) creation has been Failed"
           exit 0
         fi
-        echo "$namespace_status"
         namespace_status_iterations=$((namespace_status_iterations+1))
       done
-      echo "Namespace $(namespace) has been published successfully"
+      echo "Succeffully plublish namespace: $(namespace)"
     else
       echo "Namespace $(namespace) is already exists"
     fi
